# SeisSol

./: .clang-format  .clang-tidy  .codeclimate.yml  .flake8  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AUTHORS.txt  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Evaluate_friction_law.f90  LICENSE  README.md  README.txt  SConstruct  SConstruct_generatedKernels  SConstruct_generatedKernels_gcc  asagi.patch  azure-pipelines-clang-format.yml  azure-pipelines-clang-tidy.yml  azure-pipelines-doc-template.yml  azure-pipelines-seissol-template.yml  azure-pipelines.yml  gitlab-cpu-pipeline.yml  gitlab-docker-images.yml  gitlab-gpu-pipeline.yml  test_singularity.sh  test_singularity_cpu.sh
app/Main/: CMakeLists.txt  Main.cpp
app/Proxy/: Bindings.cpp  CMakeLists.txt  Main.cpp
codegen/: CMakeLists.txt  generate.py
codegen/config/: REUSE.toml  a64fx.xml  hsw_O3.xml  hsw_ms12.xml  ms12.xml  skx_poroelastic.xml
codegen/kernels/: aderdg.py  config.py  dynamic_rupture.py  elementwise.py  general.py  memlayout.py  multsim.py  nodalbc.py  plasticity.py  point.py  surface_displacement.py  vtkproject.py
codegen/matrices/: REUSE.toml  dr_dunavant_matrices_2.json  dr_dunavant_matrices_3.json  dr_dunavant_matrices_4.json  dr_dunavant_matrices_5.json  dr_dunavant_matrices_6.json  dr_dunavant_matrices_7.json  dr_dunavant_matrices_8.json  dr_stroud_matrices_2.json  dr_stroud_matrices_3.json  dr_stroud_matrices_4.json  dr_stroud_matrices_5.json  dr_stroud_matrices_6.json  dr_witherden_vincent_matrices_8.json  elemwise-collocate-p2.json  elemwise-collocate-p3.json  elemwise-collocate-p4.json  elemwise-collocate-p5.json  elemwise-collocate-p6.json  elemwise-collocate-p7.json  mass_2.json  mass_6.json  matrices_10.xml  matrices_120.xml  matrices_20.xml  matrices_35.xml  plasticity-ip-matrices-2.json  plasticity-ip-matrices-3.json  plasticity-ip-matrices-4.json  plasticity-ip-matrices-5.json  plasticity-ip-matrices-6.json  plasticity-nb-matrices-2.json  plasticity-nb-matrices-3.json  plasticity-nb-matrices-4.json  plasticity-nb-matrices-5.json  plasticity-nb-matrices-6.json  plasticity-nb-matrices-7.json  plasticity-nb-matrices-8.json  plasticity_ip_matrices_2.xml  plasticity_ip_matrices_3.xml  (+18 more)
docs/: CMakeLists.txt  PUML-mesh-format.rst  a-first-example.rst  acknowledge.rst  adapting-the-cad-model-resolution-using-gocad.rst  asagi.rst  attenuation.rst  basic-code-structure.rst  behind-firewall.rst  breaking-changes-backward-compatibility.rst  build-archs.rst  build-dependencies.rst  build-overview.rst  build-parameters.rst  build-run.rst  build-seissol.rst  cad-models.rst  checkpointing.rst  conf.py  configuration.rst  cookbook-overview.rst  cookbook_overview.rst  coolmuc4.rst  copyrights.rst  dynamic-rupture.rst  easi.rst  energy-output.rst  environment-variables.rst  fault-output.rst  fault-tagging.rst  free-surface-output.rst  frontier.rst  fully-coupled-mesh-tutorial.rst  generating-a-cad-model-using-gocad-basic-tutorial.rst  generating-a-megathrust-geometry.rst  gmsh.rst  gpus.rst  index.rst  initial-condition.rst  introduction.rst  (+42 more)
docs/LatexFigures/: REUSE.toml
docs/doxygen/: CMakeLists.txt  Doxyfile  Doxyfile.in  styling.css
generated-code/: CMakeLists.txt  __init__.py  common.py  generate.py  multSim.py  viscoelastic.py  vtkproject.py  yateto
generated-code/config/: REUSE.toml  dense.xml  green.xml  hsw_ms32.xml
generated-code/kernels/: DynamicRupture.py  NodalBoundaryConditions.py  Plasticity.py  Point.py  SurfaceDisplacement.py  aderdg.py  anisotropic.py  arch.py  common.py  config.py  dynamic_rupture.py  elementwise.py  general.py  material.py  memlayout.py  multsim.py  nodalbc.py  plasticity.py  point.py  poroelastic.py  surface_displacement.py  viscoelastic2.py  vtkproject.py
generated-code/matrices/: REUSE.toml  dr-dunavant-2-h2.json  dr-dunavant-2-h2.json.xz  dr-dunavant-2-h3.json.xz  dr-dunavant-2.json.xz  dr-dunavant-3-h2.json  dr-dunavant-3-h2.json.xz  dr-dunavant-3-h3.json.xz  dr-dunavant-3.json.xz  dr-dunavant-4-h2.json  dr-dunavant-4-h2.json.xz  dr-dunavant-4-h3.json.xz  dr-dunavant-4.json.xz  dr-dunavant-5-h2.json  dr-dunavant-5-h2.json.xz  dr-dunavant-5-h3.json.xz  dr-dunavant-5.json.xz  dr-dunavant-6-h2.json  dr-dunavant-6-h2.json.xz  dr-dunavant-6-h3.json.xz  dr-dunavant-6.json.xz  dr-dunavant-7-h2.json  dr-dunavant-7-h2.json.xz  dr-dunavant-7-h3.json.xz  dr-dunavant-7.json  dr-dunavant-7.json.xz  dr-dunavant-8-h2.json.xz  dr-dunavant-8-h3.json.xz  dr-dunavant-8.json  dr-dunavant-8.json.xz  dr-stroud-2-h2.json  dr-stroud-2-h2.json.xz  dr-stroud-2-h3.json.xz  dr-stroud-2.json.xz  dr-stroud-3-h2.json  dr-stroud-3-h2.json.xz  dr-stroud-3-h3.json.xz  dr-stroud-3.json.xz  dr-stroud-4-h2.json  dr-stroud-4-h2.json.xz  (+210 more)
src/: Alignment.h.in  BuildInfo.cpp.in  BuildInfo.h  CMakeLists.txt  Config.h.in  Main.cpp  README_Doxygen  SConscript  SConscript_generatedKernels  SConstruct  SConstructF2003  SConstruct_BG_check  SConstruct_compile_check  SeisSol.cpp  SeisSol.h  Version.cpp.in  Version.h  Version.h.in  VersionTemplate.h  configprint.cmake  cuda.cmake  hip.cmake  main.cpp  omptarget.cmake  seissolxx.f90  sources.cmake  sycl.cmake  version.h  version_template.h  xdmfwriter
src/Checkpoint/: Backend.cpp  Backend.h  CheckPoint.h  Dummy.h  DynStruct.h  Fault.cpp  Fault.h  FaultDummy.h  MPIInfo.h  Manager.cpp  Manager.h  ManagerExecutor.h  SConscript  SConscript_generatedKernels  Wavefield.h  WavefieldDummy.h  WavefieldHeader.h
src/Common/: CMakeLists.txt  CompactOptional.h  ConfigHelper.cpp  ConfigHelper.h  Constants.h  Executor.h  Executor.hpp  Filesystem.cpp  Filesystem.h  Fnv1a.h  IntegerMaskParser.cpp  IntegerMaskParser.h  Iterator.h  Literals.h  Marker.h  Offset.h  Real.h  SegmentMap.h  Templating.h  Typedefs.h  cellconfig.hpp  cellconfigconv.cpp  cellconfigconv.hpp  configs.hpp  configtensor.hpp  constants.hpp  executor.hpp  filesystem.h  fnv1a.h  precision.hpp  templating.hpp  varianthelper.hpp
tests/: CMakeLists.txt  REUSE.toml  Setup.h.in  TestHelper.h  TestMain.cpp
(+4999 files in other folders)
